--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
+
+.myJumbo {
+    height: 350px;
+    background-image: url('../img/jumbotron.jpg');
+}
+
+main {
+    background-color: rgb(36, 35, 35);
+}
+
+.myCard {
+    width: calc((100% /6) - 1.5rem);
+    margin: 0.75rem;
+}
+
+footer {
+    height: 350px;
+    background-image: url('../img/footer-bg.jpg');
+}
