--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -9,12 +9,31 @@ main {
     background-color: rgb(36, 35, 35);
 }
 
+.myImg {
+    position: relative;
+    z-index: -1;
+    bottom: 150px;
+    max-height: 100%;
+    object-fit: 100%;
+}
+
 .myCard {
     width: calc((100% /6) - 1.5rem);
     margin: 0.75rem;
 }
 
-footer {
-    height: 350px;
+#myTop {
+    height: 400px;
     background-image: url('../img/footer-bg.jpg');
+    position: relative;
+    z-index: -2;
+}
+
+#myBottom {
+    height: 70px;
+    background-color: rgb(36, 35, 35);
+    color: grey;
+    .container {
+        height: 100%;
+    }
 }
